# pipecat-rs

./: AGENTS.md  Cargo.toml
.cargo/: config.toml
pipecat_rs/: Cargo.toml
pipecat_rs/src/: lib.rs  observer.rs  pipeline.rs  processors.rs  server.rs
pipecat_rs/tests/: test_empty_pipeline.rs  test_websocket_pipeline.rs
pipecat_rs_core/: Cargo.toml
pipecat_rs_core/src/: frame.rs
pipecat_rs_locked/: Cargo.toml
pipecat_rs_locked/src/: frame.rs
pipecat_rs_tests/: Cargo.toml
pipecat_rs_tests/src/: config.rs  lib.rs  test_echo_pipeline.rs
pipecat_rs_tests/tests/: test_echo_pipeline.rs  test_websocket_pipeline.rs
pipeline/: Cargo.toml
pipeline/src/: echo_processor.rs  frame.rs  frame_processor.rs  lib.rs  pipeline.rs  pipeline_component.rs
pipeline/tests/: echo.rs
src/: lib.rs  main.rs  spec.rs
src/frame/: frame.rs
src/frame_processor/: frame_processor.rs
src/pipeline/: pipeline.rs
tests/: test_empty_pipeline.rs  test_single_processor_pipeline.rs  validate_specs.rs
tests/specs/: SCHEMA.md  echo.yaml  single_websocket.yaml
