[package]
name = "pipecat_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
once_cell = "1"
socket2 = "0.5"
