[package]
name = "pipecat_rs_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3"

[dev-dependencies]
pipecat_rs = { path = "../pipecat_rs" }
pipecat_rs_locked = { path = "../pipecat_rs_locked" }