[package]
name = "pipecat_rs_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "test-util"] }
futures-util = "0.3"
tokio-tungstenite = "0.23"
tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
url = "2"
serde_json = "1"
pipecat_rs = { path = "../pipecat_rs" }
pipecat_rs_locked = { path = "../pipecat_rs_locked" }
uuid = { version = "1", features = ["v4"] }
